# fabric-telemetry-project

./: .gitignore  README.md
.github/workflows/: secure-pipeline.yml
agents/go-agent/: go.mod  main.go
agents/go-agent/gopath/pkg/mod/cache/download/github.com/eclipse/paho.mqtt.golang/@v/: v1.5.0.info  v1.5.0.ziphash
agents/go-agent/gopath/pkg/mod/cache/download/github.com/gorilla/websocket/@v/: v1.5.3.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/crypto/@v/: v0.25.0.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/net/@v/: list  v0.27.0.info  v0.41.0.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/sync/@v/: v0.15.0.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/sys/@v/: v0.22.0.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/telemetry/config/@v/: list  v0.49.0.info
agents/go-agent/gopath/pkg/mod/cache/download/golang.org/x/term/@v/: v0.22.0.info
agents/go-agent/gopath/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/: toolchain@v0.0.1-go1.23.10.linux-amd64
agents/go-agent/gopath/pkg/sumdb/sum.golang.org/: latest
agents/rust-agent/: Cargo.toml
agents/rust-agent/src/: main.rs
aws/: README.md  setup.sh
aws/iam/: iot_timestream_policy.json
aws/iot/rules/: forward_to_timestream.json
esp32-firmware/certs/: ca_cert.h  certificates.h
esp32-firmware/include/: secrets.h
esp32-firmware/src/: fabric-esp32-test.ino
scripts/: publish_test.py  pyproject.toml  simulate.py
site/: index.md
site/dashboards/: index.md
(+16 files in other folders)
